Add list customer page, retrieve customers from backend

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,10 @@
 
 // Pages
 @import './pages/login';
+@import './pages/customers';
 
 // Components
 @import './components/single-input';
 @import './components/button';
 @import './components/loader';
+@import './components/page-header';
