Add some fields of customer form

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,5 @@
 @import './components/button';
 @import './components/loader';
 @import './components/page-header';
+@import './components/section-header';
+@import './components/create-customer-form';
