--- a/src/styles/components/page-header.scss
+++ b/src/styles/components/page-header.scss
@@ -2,10 +2,16 @@ header.page-header {
     display: flex;
     align-items: center;
     background-color: $primary-color;
-    padding: calc($base-unit * 2) calc($base-unit * 4);
+    padding: calc($base-unit * 2);
 
-    h2 {
-        color: $white;
+    nav {
         flex: 1;
+        display: flex;
+        align-items: center;
+
+        h2 {
+            color: $white;
+        }
     }
+
 }
