--- a/src/styles/components/create-customer-form.scss
+++ b/src/styles/components/create-customer-form.scss
@@ -2,4 +2,71 @@ form.customer-form {
     display: flex;
     flex-direction: column;
     row-gap: calc($base-unit * 2);
+
+    .add-phone-number-component {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: calc($base-unit * 2);
+
+        section.new-number-content {
+            display: flex;
+            flex-wrap: wrap;
+            gap: calc($base-unit * 2);
+
+            padding: calc($base-unit * 2);
+            border: 1px solid $light-grey;
+            border-radius: $border-radius;
+            width: 100%;
+    
+            .single-input-wrapper {
+                flex: 6;
+            }
+
+            select {
+                flex: 1;
+            }
+
+            .action-buttons {
+                display: flex;
+                column-gap: calc($base-unit * 1.5);
+                flex: 1 0 $base-unit * 20;
+                @media screen and (min-width: $break-md) {
+                    flex: 0 0 0;
+                }
+
+                button {
+                    flex: 1 0 calc($base-unit * 6);
+                    @media screen and (min-width: $break-md) {
+                        flex: 0 0 calc($base-unit * 6);
+                    }
+
+                    &.enforce-disable {
+                        &:disabled {
+                            opacity: .5;
+                            cursor: not-allowed;
+                        }
+                    }
+                }
+            }
+        }
+
+        .inserted-phones {
+            display: flex;
+            gap: $base-unit;
+            justify-content: flex-start;
+            align-items: flex-start;
+            flex-wrap: wrap;
+
+            button.tag {
+                background-color: $color-green;
+                color: $white;
+                padding: $base-unit calc($base-unit * 2);
+                border-radius: $border-radius;
+                border: none;
+                font-size: .875rem;
+            }
+        }
+    }
 }
