--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 @import './variables';
+@import './mixins';
 @import './global';
 
 // Pages
@@ -14,3 +15,4 @@
 @import './components/page-header';
 @import './components/section-header';
 @import './components/create-customer-form';
+@import './components/single-select';
