--- a/src/styles/pages/customers.scss
+++ b/src/styles/pages/customers.scss
@@ -3,11 +3,11 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(180deg, $primary-color 0%, #3ca9e9 100%, rgba(45, 156, 219, 0) 100%);;
 
-    section {
+    > section {
         flex: 1;
         display: flex;
+        background: linear-gradient(180deg, $primary-color 0%, #3ca9e9 100%, rgba(45, 156, 219, 0) 100%);
 
         .side-bar {
             @media screen and (min-width: $break-lg) {
