--- a/src/styles/components/create-customer-form.scss
+++ b/src/styles/components/create-customer-form.scss
@@ -29,7 +29,7 @@ form.customer-form {
             align-items: flex-start;
             column-gap: calc($base-unit * 1);
 
-            button.app-button {
+            > button.app-button {
                 margin-top: $base-unit;
                 width: 100%;
             }
@@ -95,12 +95,29 @@ form.customer-form {
         }
     }
 
+    span.form-erros {
+        padding: calc($base-unit * 2);
+        background-color: $color-red;
+        color: $white;
+        font-weight: 600;
+        text-align: center;
+        border-radius: $border-radius;
+    }
+
     footer {
         display: flex;
         gap: calc($base-unit * 2);
 
         button {
             flex: 1;
+        }
+
+        @media screen and (min-width: $break-md) {
+            justify-content: space-between;
+
+            button {
+                flex: none;
+            }
         }
     }
 }
