--- a/src/styles/components/single-input.scss
+++ b/src/styles/components/single-input.scss
@@ -21,9 +21,13 @@
 
     &.error {
         border: 1px solid $color-red;
+        border-radius: calc($border-radius * 1.5);
+
         input {
             border: 2px solid $color-red;
             outline: none;
+            border-end-start-radius: 0px !important;
+            border-end-end-radius: 0px !important;
 
             &::placeholder {
                 color: rgba($color-red, .8);
