Add Authorities verification

--- a/src/styles/components/single-input.scss
+++ b/src/styles/components/single-input.scss
@@ -4,6 +4,12 @@
 
     input {
         @include input-style-base;
+
+        &:read-only {
+            border: none;
+            cursor: default;
+            outline: none;
+        }
     }
 
     ul {
